--- a/Main/Source code/Elysium.Notifications/Documentation/ru/Elysium.Notifications.tt
+++ b/Main/Source code/Elysium.Notifications/Documentation/ru/Elysium.Notifications.tt
@@ -1,28 +1,25 @@
 ﻿<#@ template language="C#" hostSpecific="true" #>
 <#@ output extension=".xml" #>
-<#@ assembly name="System.Core.dll" #>
-<#@ assembly name="System.Xml.dll" #>
-<#@ assembly name="System.Xml.Linq.dll" #>
-<#@ import namespace="System" #>
+<#@ assembly name="System.Core" #>
+<#@ assembly name="System.Xml" #>
+<#@ assembly name="System.Xml.Linq" #>
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.IO" #>
-<#@ import namespace="System.Linq" #>
-<#@ import namespace="System.Text" #>
-<#@ import namespace="System.Xml" #>
 <#@ import namespace="System.Xml.Linq" #>
 <#
     var root = Host.ResolvePath(@"..\..\");
     
-    var paths = new List<string>();
-           
-    paths.Add(@"Animation.ru.xml");
-    paths.Add(@"HorizontalPlacement.ru.xml");
-    paths.Add(@"NotificationManager.ru.xml");
-    paths.Add(@"VerticalPlacement.ru.xml");
+    var paths = new List<string>
+        {
+            @"Animation.ru.xml",
+            @"HorizontalPlacement.ru.xml",
+            @"NotificationManager.ru.xml",
+            @"VerticalPlacement.ru.xml",
 
-    paths.Add(@"Exceptions\PushNotificationFailedException.ru.xml");
-    paths.Add(@"Exceptions\ServerUnavailableException.ru.xml");
-    
+            @"Exceptions\PushNotificationFailedException.ru.xml",
+            @"Exceptions\ServerUnavailableException.ru.xml"
+        };
+
     var documentation = new XDocument(new XDeclaration("1.0", "utf-8", "yes"));
     
     var doc = new XElement("doc");
