--- a/Main/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1033/.NET Framework 4/MetroApplication.tt
+++ b/Main/Source code/SDK/MSI/ProjectTemplates/Visual Studio 2012/CSharp/1033/.NET Framework 4/MetroApplication.tt
@@ -1,13 +1,6 @@
 ﻿<#@ template language="C#" hostSpecific="true" debug="true" #>
 <#@ output extension=".csproj" #>
-<#@ Assembly Name="mscorlib.dll" #>
-<#@ Assembly Name="System.Core.dll" #>
-<#@ import namespace="System" #>
-<#@ import namespace="System.IO" #>
-<#@ import namespace="System.Diagnostics" #>
-<#@ import namespace="System.Linq" #>
-<#@ import namespace="System.Collections" #>
-<#@ import namespace="System.Collections.Generic" #>
+<#@ assembly Name="System.Core" #>
 <#@ include file="..\..\..\..\..\..\..\Include\Security.ttinclude" #>
 <#@ include file="..\..\..\..\..\..\..\Include\Versions.ttinclude" #>
 <?xml version="1.0" encoding="utf-8"?>
