--- a/Main/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
+++ b/Main/Source code/.NET Framework 4/Elysium/Themes/Windows/Window.xaml
@@ -124,6 +124,8 @@
                                             Grid.Column="0"
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Minimize}"
+                                            ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MinimizeButtonToolTip), Mode=OneWay}"
+                                            ToolTipService.ShowOnDisabled="True"
                                             Width="34" MinWidth="34">
                                         <Path Data="{StaticResource MinimizeIcon}"
                                               Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
@@ -134,6 +136,8 @@
                                             Grid.Column="1"
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Maximize}"
+                                            ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.MaximizeButtonToolTip), Mode=OneWay}"
+                                            ToolTipService.ShowOnDisabled="True"
                                             Width="34" MinWidth="34">
                                         <Path Data="{StaticResource MaximizeIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
@@ -144,6 +148,8 @@
                                             Grid.Column="1"
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Restore}"
+                                            ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.RestoreButtonToolTip), Mode=OneWay}"
+                                            ToolTipService.ShowOnDisabled="True"
                                             Width="34" MinWidth="34"
                                             Visibility="Hidden">
                                         <Path Data="{StaticResource RestoreIcon}"
@@ -155,6 +161,8 @@
                                             Grid.Column="2"
                                             BorderThickness="0"
                                             Command="{x:Static controls:WindowCommands.Close}"
+                                            ToolTip="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(params:Window.CloseButtonToolTip), Mode=OneWay}"
+                                            ToolTipService.ShowOnDisabled="True"
                                             Width="34" MinWidth="34">
                                         <Path Data="{StaticResource CloseIcon}"
                                               Stroke="{Binding RelativeSource={RelativeSource AncestorType={x:Type Button}}, Path=Foreground, Mode=OneWay}"
