--- a/Main/Source code/Elysium.Test/MainWindow.xaml
+++ b/Main/Source code/Elysium.Test/MainWindow.xaml
@@ -8,6 +8,10 @@
               params:Design.ContrastBrush="White"
               Background="{DynamicResource BackgroundBrush}"
               Title="Window" IsMainWindow="True"
+              params:Window.MinimizeButtonToolTip="Minimize"
+              params:Window.MaximizeButtonToolTip="Maximize"
+              params:Window.RestoreButtonToolTip="Restore"
+              params:Window.CloseButtonToolTip="Close"
               WindowStartupLocation="CenterScreen"
               Width="1024" Height="640">
     <metro:Window.ApplicationBar>
